--- a/test.html
+++ b/test.html
@@ -20,20 +20,61 @@
     <div class="section header">
         <img class="logo" src="assets/barevne_pozitivni.svg" alt=""/>
         <img class="claim" src="assets/claim.svg" alt=""/>
-
     </div>
 
     <div class="section swipe">
 
         <div class="swiper-container">
             <div class="swiper-wrapper">
-                <div class="swiper-slide"><img src="assets/slider/received_200482364670734.jpeg" alt=""></div>
-                <div class="swiper-slide"><img src="assets/slider/received_309204920453748.jpeg" alt=""></div>
-                <div class="swiper-slide"><img src="assets/slider/received_318047789208979.jpeg" alt=""></div>
-                <div class="swiper-slide"><img src="assets/slider/received_319617315883312.jpeg" alt=""></div>
-                <div class="swiper-slide"><img src="assets/slider/received_924944451319300.jpeg" alt=""></div>
-                <div class="swiper-slide"><img src="assets/slider/received_581129982764911.jpeg" alt=""></div>
-                <div class="swiper-slide"><img src="assets/slider/received_409977386552912.jpeg" alt=""></div>
+                <div class="swiper-slide">
+                    <div class="aspect-ratio-container">
+                        <div class="aspect-ratio-content">
+                            <img src="assets/slider/received_200482364670734.jpeg" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="aspect-ratio-container">
+                        <div class="aspect-ratio-content">
+                            <img src="assets/slider/received_309204920453748.jpeg" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="aspect-ratio-container">
+                        <div class="aspect-ratio-content">
+                            <img src="assets/slider/received_318047789208979.jpeg" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="aspect-ratio-container">
+                        <div class="aspect-ratio-content">
+                            <img src="assets/slider/received_319617315883312.jpeg" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="aspect-ratio-container">
+                        <div class="aspect-ratio-content">
+                            <img src="assets/slider/received_924944451319300.jpeg" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="aspect-ratio-container">
+                        <div class="aspect-ratio-content">
+                            <img src="assets/slider/received_581129982764911.jpeg" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="aspect-ratio-container">
+                        <div class="aspect-ratio-content">
+                            <img src="assets/slider/received_409977386552912.jpeg" alt="">
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <div class="swiper-button-prev"></div>
