--- a/index.html
+++ b/index.html
@@ -2,9 +2,126 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ArtEco</title>
+    <title>Art Eco</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
+    <!--    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">-->
+    <link rel="stylesheet" href="assets/font/stylesheet.css">
+
+    <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
+    <!--    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>-->
+    <link rel="stylesheet" href="index.css"/>
+
 </head>
 <body>
-<img src="assets/barevne_pozitivni.svg">
+
+<div class="bottom-logo">
+    <img src="assets/barevne_pozitivni_x.svg" alt="" class="bottom-logo-image">
+</div>
+
+<div class="main">
+
+    <div class="section header">
+        <img class="logo" src="assets/barevne_pozitivni.svg" alt=""/>
+        <img class="claim" src="assets/claim.svg" alt=""/>
+    </div>
+
+    <div class="section swipe">
+
+        <div class="swiper-container">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <div class="aspect-ratio-container">
+                        <div class="aspect-ratio-content">
+                            <img src="assets/slider/received_200482364670734.jpeg" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="aspect-ratio-container">
+                        <div class="aspect-ratio-content">
+                            <img src="assets/slider/received_309204920453748.jpeg" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="aspect-ratio-container">
+                        <div class="aspect-ratio-content">
+                            <img src="assets/slider/received_318047789208979.jpeg" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="aspect-ratio-container">
+                        <div class="aspect-ratio-content">
+                            <img src="assets/slider/received_319617315883312.jpeg" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="aspect-ratio-container">
+                        <div class="aspect-ratio-content">
+                            <img src="assets/slider/received_924944451319300.jpeg" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="aspect-ratio-container">
+                        <div class="aspect-ratio-content">
+                            <img src="assets/slider/received_581129982764911.jpeg" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="aspect-ratio-container">
+                        <div class="aspect-ratio-content">
+                            <img src="assets/slider/received_409977386552912.jpeg" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+
+        </div>
+    </div>
+
+    <div class="section bullets">
+        <div class="swiper-pagination"></div>
+    </div>
+
+    <div class="section content">
+        <div class="content-item strpeni">
+            <h3>Prosíme o strpení</h3>
+            Stavíme pro vás plnohodnotnou webovou prezentaci. Prozatím si prohlédněte alespoň pár ukázek naší práce.
+
+        </div>
+
+        <div class="divider">&nbsp;</div>
+
+        <div class="content-item kontakt">
+            <h3>Neváhejte se nám ozvat</h3>
+
+            <div class="content-item-item address">
+                Arteco group s.r.o. <br/>
+                Polská 60, 779 00 Olomouc <br/>
+                IČ: 03115968 <br/>
+                DIČ: CZ03115968
+            </div>
+
+            <div class="content-item-item">
+                info@art-eco.cz<br/>
+                +420 724 952 450<br/>
+                www.art-eco.cz<br/>
+                facebook.com/art-eco
+            </div>
+        </div>
+    </div>
+
+</div>
+
+<script type="text/javascript" src="index.js"></script>
+
 </body>
 </html>
