--- a/test.html
+++ b/test.html
@@ -15,6 +15,10 @@
 </head>
 <body>
 
+<div class="bottom-logo">
+    <img src="assets/barevne_pozitivni_x.svg" alt="" class="bottom-logo-image">
+</div>
+
 <div class="main">
 
     <div class="section header">
@@ -93,6 +97,9 @@
             Stavíme pro vás plnohodnotnou webovou prezentaci. Prozatím si prohlédněte alespoň pár ukázek naší práce.
 
         </div>
+
+        <div class="divider">&nbsp;</div>
+
         <div class="content-item kontakt">
             <h3>Neváhejte se nám ozvat</h3>
 
@@ -112,10 +119,6 @@
         </div>
     </div>
 
-</div>
-
-<div class="bottom-logo">
-    <img src="assets/barevne_pozitivni_x.svg" alt="" class="bottom-logo-image">
 </div>
 
 <script type="text/javascript" src="index.js"></script>
