--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </div>
 
     <div class="section bullets">
-        <div class="swiper-pagination"></div>
+        <div class="swiper-pagination">.</div>
     </div>
 
     <div class="section content">
