--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8">
     <title>Art Eco</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
-    <!--    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">-->
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="assets/font/stylesheet.css">
 
-    <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
-    <!--    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>-->
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <link rel="stylesheet" href="index.css"/>
 
 </head>
@@ -94,8 +92,10 @@
     <div class="section content">
         <div class="content-item strpeni">
             <h3>Prosíme o strpení</h3>
-            Stavíme pro vás plnohodnotnou webovou prezentaci. Prozatím si prohlédněte alespoň pár ukázek naší práce.
 
+            <div class="strpeni-content"> Stavíme pro vás plnohodnotnou webovou prezentaci. Prozatím si prohlédněte
+                alespoň pár ukázek naší práce.
+            </div>
         </div>
 
         <div class="divider">&nbsp;</div>
@@ -111,14 +111,15 @@
             </div>
 
             <div class="content-item-item">
-                info@art-eco.cz<br/>
-                +420 724 952 450<br/>
-                www.art-eco.cz<br/>
-                facebook.com/art-eco
+                <a href="mailto:info@art-eco.cz">info@art-eco.cz</a>
+                <a href="tel:+420724952450">+420 724 952 450</a>
+                <a href="tel:+420724952450">+420 724 952 450</a>
+                <a href="https://art-eco.cz" target="_blank">www.art-eco.cz</a>
+                &nbsp;<br/>
+<!--                <a href="https://facebook.com/art-eco" target="_blank">facebook.com/art-eco</a>-->
             </div>
         </div>
     </div>
-
 </div>
 
 <script type="text/javascript" src="index.js"></script>
