--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Art Eco</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+    <link rel="stylesheet" href="swiper-bundle.css">
     <link rel="stylesheet" href="assets/font/stylesheet.css">
 
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
