--- a/index.html
+++ b/index.html
@@ -117,6 +117,10 @@
                 &nbsp;<br/>
 <!--                <a href="https://facebook.com/art-eco" target="_blank">facebook.com/art-eco</a>-->
             </div>
+            <div class="stavario">
+                Naše firma používá <img src="assets/stavario.png">
+            </div>
+
         </div>
     </div>
 </div>
