--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 <!--                <a href="https://facebook.com/art-eco" target="_blank">facebook.com/art-eco</a>-->
             </div>
             <div class="stavario">
-                Naše firma používá <img src="assets/stavario.png">
+                Naše firma používá software <img src="assets/stavario.png">
             </div>
 
         </div>
