--- a/index.html
+++ b/index.html
@@ -115,10 +115,12 @@
                 <a href="tel:+420724952450">+420 724 952 450</a>
                 <a href="https://art-eco.cz" target="_blank">www.art-eco.cz</a>
                 &nbsp;<br/>
-<!--                <a href="https://facebook.com/art-eco" target="_blank">facebook.com/art-eco</a>-->
+                <!--                <a href="https://facebook.com/art-eco" target="_blank">facebook.com/art-eco</a>-->
             </div>
             <div class="stavario">
-                Naše firma používá software <img src="assets/stavario.svg">
+                Naše firma používá software <a href="https://www.stavario.com/" target="_blank" style="display: contents">
+                <img src="assets/stavario.svg">
+            </a>
             </div>
 
         </div>
@@ -129,10 +131,14 @@
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-173055510-1"></script>
 <script>
-	window.dataLayer = window.dataLayer || [];
-	function gtag(){dataLayer.push(arguments);}
-	gtag('js', new Date());
-	gtag('config', 'UA-173055510-1');
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+
+    gtag('js', new Date());
+    gtag('config', 'UA-173055510-1');
 </script>
 
 </body>
